preS18/ProgrammingLanguages/Parser/cool.output
Terminals unused in grammar

   ERROR


State 124 conflicts: 9 shift/reduce
State 133 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list
    2        | error

    3 class_list: class
    4           | error ';'
    5           | class_list class
    6           | class_list error ';'

    7 class: CLASS TYPEID '{' feature_list '}' ';'
    8      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    9 feature_list: /* empty */
   10             | feature_list feature

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | OBJECTID ':' TYPEID ASSIGN expression ';'
   13        | OBJECTID ':' TYPEID ';'

   14 formal_list: /* empty */
   15            | formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expression_list: /* empty */
   19                | expression
   20                | expression_list ',' expression

   21 expression_set: expression ';'
   22               | expression_set expression ';'

   23 case: OBJECTID ':' TYPEID DARROW expression

   24 case_list: case ';'
   25          | case_list case

   26 expression: OBJECTID ASSIGN expression
   27           | '{' expression_set '}'
   28           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   29           | expression '.' OBJECTID '(' expression_list ')'
   30           | OBJECTID '(' expression_list ')'
   31           | IF expression THEN expression ELSE expression FI
   32           | WHILE expression LOOP expression POOL
   33           | LET OBJECTID ':' TYPEID IN expression
   34           | LET OBJECTID ':' TYPEID ASSIGN expression IN expression
   35           | CASE expression OF case_list ESAC
   36           | NEW TYPEID
   37           | ISVOID expression
   38           | '~' expression
   39           | expression '<' expression
   40           | expression '=' expression
   41           | expression '+' expression
   42           | expression '-' expression
   43           | expression '*' expression
   44           | expression '/' expression
   45           | NOT expression
   46           | '(' expression ')'
   47           | expression LE expression
   48           | OBJECTID
   49           | INT_CONST
   50           | STR_CONST
   51           | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 28 29 30 46
')' (41) 11 28 29 30 46
'*' (42) 43
'+' (43) 41
',' (44) 16 20
'-' (45) 42
'.' (46) 28 29
'/' (47) 44
':' (58) 11 12 13 17 23 33 34
';' (59) 4 6 7 8 11 12 13 21 22 24
'<' (60) 39
'=' (61) 40
'@' (64) 28
'{' (123) 7 8 11 27
'}' (125) 7 8 11 27
'~' (126) 38
error (256) 2 4 6
CLASS (258) 7 8
ELSE (259) 31
FI (260) 31
IF (261) 31
IN (262) 33 34
INHERITS (263) 8
LET (264) 33 34
LOOP (265) 32
POOL (266) 32
THEN (267) 31
WHILE (268) 32
CASE (269) 35
ESAC (270) 35
OF (271) 35
DARROW (272) 23
NEW (273) 36
ISVOID (274) 37
STR_CONST (275) 50
INT_CONST (276) 49
BOOL_CONST (277) 51
TYPEID (278) 7 8 11 12 13 17 23 28 33 34 36
OBJECTID (279) 11 12 13 17 23 26 28 29 30 33 34 48
ASSIGN (280) 12 26 34
NOT (281) 45
LE (282) 47
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1 2, on right: 0
class_list (47)
    on left: 3 4 5 6, on right: 1 5 6
class (48)
    on left: 7 8, on right: 3 5
feature_list (49)
    on left: 9 10, on right: 7 8 10
feature (50)
    on left: 11 12 13, on right: 10
formal_list (51)
    on left: 14 15 16, on right: 11 16
formal (52)
    on left: 17, on right: 15 16
expression_list (53)
    on left: 18 19 20, on right: 20 28 29 30
expression_set (54)
    on left: 21 22, on right: 22 27
case (55)
    on left: 23, on right: 24 25
case_list (56)
    on left: 24 25, on right: 25 35
expression (57)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48 49 50 51, on right: 11 12 19 20 21 22 23 26 28 29
    31 32 33 34 35 37 38 39 40 41 42 43 44 45 46 47


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    2 program: error .
    4 class_list: error . ';'

    ';'  shift, and go to state 6

    $default  reduce using rule 2 (program)


state 2

    7 class: CLASS . TYPEID '{' feature_list '}' ';'
    8      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    5 class_list: class_list . class
    6           | class_list . error ';'

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


state 5

    3 class_list: class .

    $default  reduce using rule 3 (class_list)


state 6

    4 class_list: error ';' .

    $default  reduce using rule 4 (class_list)


state 7

    7 class: CLASS TYPEID . '{' feature_list '}' ';'
    8      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


state 8

    0 $accept: program $end .

    $default  accept


state 9

    6 class_list: class_list error . ';'

    ';'  shift, and go to state 13


state 10

    5 class_list: class_list class .

    $default  reduce using rule 5 (class_list)


state 11

    8 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 14


state 12

    7 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 9 (feature_list)

    feature_list  go to state 15


state 13

    6 class_list: class_list error ';' .

    $default  reduce using rule 6 (class_list)


state 14

    8 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 16


state 15

    7 class: CLASS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18

    feature  go to state 19


state 16

    8 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 9 (feature_list)

    feature_list  go to state 20


state 17

   11 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expression ';'
   13        | OBJECTID . ':' TYPEID ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


state 18

    7 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 23


state 19

   10 feature_list: feature_list feature .

    $default  reduce using rule 10 (feature_list)


state 20

    8 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 24

    feature  go to state 19


state 21

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 14 (formal_list)

    formal_list  go to state 26
    formal       go to state 27


state 22

   12 feature: OBJECTID ':' . TYPEID ASSIGN expression ';'
   13        | OBJECTID ':' . TYPEID ';'

    TYPEID  shift, and go to state 28


state 23

    7 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 7 (class)


state 24

    8 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 29


state 25

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 30


state 26

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 31
    ','  shift, and go to state 32


state 27

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


state 28

   12 feature: OBJECTID ':' TYPEID . ASSIGN expression ';'
   13        | OBJECTID ':' TYPEID . ';'

    ASSIGN  shift, and go to state 33
    ';'     shift, and go to state 34


state 29

    8 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 8 (class)


state 30

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 35


state 31

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 36


state 32

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 37


state 33

   12 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 52


state 34

   13 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 13 (feature)


state 35

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


state 36

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 53


state 37

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


state 38

   31 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 54


state 39

   33 expression: LET . OBJECTID ':' TYPEID IN expression
   34           | LET . OBJECTID ':' TYPEID ASSIGN expression IN expression

    OBJECTID  shift, and go to state 55


state 40

   32 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 56


state 41

   35 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 57


state 42

   36 expression: NEW . TYPEID

    TYPEID  shift, and go to state 58


state 43

   37 expression: ISVOID . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 59


state 44

   50 expression: STR_CONST .

    $default  reduce using rule 50 (expression)


state 45

   49 expression: INT_CONST .

    $default  reduce using rule 49 (expression)


state 46

   51 expression: BOOL_CONST .

    $default  reduce using rule 51 (expression)


state 47

   26 expression: OBJECTID . ASSIGN expression
   30           | OBJECTID . '(' expression_list ')'
   48           | OBJECTID .

    ASSIGN  shift, and go to state 60
    '('     shift, and go to state 61

    $default  reduce using rule 48 (expression)


state 48

   45 expression: NOT . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 62


state 49

   38 expression: '~' . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 63


state 50

   27 expression: '{' . expression_set '}'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression_set  go to state 64
    expression      go to state 65


state 51

   46 expression: '(' . expression ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 66


state 52

   12 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   28 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   29           | expression . '.' OBJECTID '(' expression_list ')'
   39           | expression . '<' expression
   40           | expression . '=' expression
   41           | expression . '+' expression
   42           | expression . '-' expression
   43           | expression . '*' expression
   44           | expression . '/' expression
   47           | expression . LE expression

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    ';'  shift, and go to state 76


state 53

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 77


state 54

   28 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   29           | expression . '.' OBJECTID '(' expression_list ')'
   31           | IF expression . THEN expression ELSE expression FI
   39           | expression . '<' expression
   40           | expression . '=' expression
   41           | expression . '+' expression
   42           | expression . '-' expression
   43           | expression . '*' expression
   44           | expression . '/' expression
   47           | expression . LE expression

    THEN  shift, and go to state 78
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


state 55

   33 expression: LET OBJECTID . ':' TYPEID IN expression
   34           | LET OBJECTID . ':' TYPEID ASSIGN expression IN expression

    ':'  shift, and go to state 79


state 56

   28 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   29           | expression . '.' OBJECTID '(' expression_list ')'
   32           | WHILE expression . LOOP expression POOL
   39           | expression . '<' expression
   40           | expression . '=' expression
   41           | expression . '+' expression
   42           | expression . '-' expression
   43           | expression . '*' expression
   44           | expression . '/' expression
   47           | expression . LE expression

    LOOP  shift, and go to state 80
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


state 57

   28 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   29           | expression . '.' OBJECTID '(' expression_list ')'
   35           | CASE expression . OF case_list ESAC
   39           | expression . '<' expression
   40           | expression . '=' expression
   41           | expression . '+' expression
   42           | expression . '-' expression
   43           | expression . '*' expression
   44           | expression . '/' expression
   47           | expression . LE expression

    OF   shift, and go to state 81
    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75


state 58

   36 expression: NEW TYPEID .

    $default  reduce using rule 36 (expression)


state 59

   28 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   29           | expression . '.' OBJECTID '(' expression_list ')'
   37           | ISVOID expression .
   39           | expression . '<' expression
   40           | expression . '=' expression
   41           | expression . '+' expression
   42           | expression . '-' expression
   43           | expression . '*' expression
   44           | expression . '/' expression
   47           | expression . LE expression

    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 37 (expression)


state 60

   26 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 82


state 61

   30 expression: OBJECTID '(' . expression_list ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    $default  reduce using rule 18 (expression_list)

    expression_list  go to state 83
    expression       go to state 84


state 62

   28 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   29           | expression . '.' OBJECTID '(' expression_list ')'
   39           | expression . '<' expression
   40           | expression . '=' expression
   41           | expression . '+' expression
   42           | expression . '-' expression
   43           | expression . '*' expression
   44           | expression . '/' expression
   45           | NOT expression .
   47           | expression . LE expression

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 45 (expression)


state 63

   28 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   29           | expression . '.' OBJECTID '(' expression_list ')'
   38           | '~' expression .
   39           | expression . '<' expression
   40           | expression . '=' expression
   41           | expression . '+' expression
   42           | expression . '-' expression
   43           | expression . '*' expression
   44           | expression . '/' expression
   47           | expression . LE expression

    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 38 (expression)


state 64

   22 expression_set: expression_set . expression ';'
   27 expression: '{' expression_set . '}'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '}'         shift, and go to state 85
    '('         shift, and go to state 51

    expression  go to state 86


state 65

   21 expression_set: expression . ';'
   28 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   29           | expression . '.' OBJECTID '(' expression_list ')'
   39           | expression . '<' expression
   40           | expression . '=' expression
   41           | expression . '+' expression
   42           | expression . '-' expression
   43           | expression . '*' expression
   44           | expression . '/' expression
   47           | expression . LE expression
